*dandi-cli-0.28.0 (06 Oct 2021)

  06 Oct 2021;  <chymera@gentoo.org> +dandi-cli-0.28.0.ebuild,
  +files/dandi-cli-0.27.2-no-etelemetry.patch,
  +files/dandi-cli-0.27.2-pip-versioncheck.patch,
  +files/dandi-cli-0.28.0-pip-versioncheck.patch, -ChangeLog,
  dandi-cli-0.27.2.ebuild, metadata.xml:
  dev-vcs/dandi-cli: added etelemetry support