@@ -1,3 +1,6 @@
+  11 Oct 2021;  <chymera@gentoo.org> dandi-cli-0.28.0.ebuild:
+  dev-vcs/dandi-cli: added dep and ammended test suite
+
 *dandi-cli-0.28.0 (06 Oct 2021)
 
   06 Oct 2021;  <chymera@gentoo.org> +dandi-cli-0.28.0.ebuild,
